--- a/layouts/partials/site_footer.html
+++ b/layouts/partials/site_footer.html
@@ -5,29 +5,25 @@
         <div class="col-md-7">
             <p>
                 <strong>{{ .Site.Params.course.number }}: {{ .Site.Title }} ({{ .Site.Params.course.semester }})</strong><br>
-
-                <a href="{{ .Site.Params.university.url }}" target="_blank" rel="noopener">{{ .Site.Params.university.name }}</a> &emsp;&emsp;
+            </p>
+            <p>
+                <a href="{{ .Site.Params.university.url }}" target="_blank" rel="noopener">{{ .Site.Params.university.name }}</a>
+            </p>
+            <p>
                 <a href="{{ .Site.Params.school.url }}" target="_blank" rel="noopener">{{ .Site.Params.school.name }}</a>
             </p>
-
             <p>
-                <a href="{{ .Site.Params.instructor.url }}" target="_blank" rel="noopener"><i class="fas fa-user"></i>
-                    {{ .Site.Params.instructor.name }}</a> &emsp;&emsp;
+                <a><i class="fas fa-user"></i>
+                    {{ .Site.Params.instructor.name }}</a>
+            </p>
+            <p>
                 <a href="mailto:{{ .Site.Params.instructor.email }}"><i class="fas fa-envelope"></i>
                     {{ .Site.Params.instructor.email }}</a>
-            </p>
-
-            <p>
-                <i class="far fa-calendar-alt"></i> {{ .Site.Params.course.days }} &emsp;&emsp;
-                <i class="far fa-clock"></i> {{ .Site.Params.course.time }} <br>
-                <i class="fas fa-university"></i> {{ .Site.Params.course.location }}
             </p>
         </div>
 
         <div class="col-md-5 credits">
             <p>All content licensed under a <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank" rel="noopener">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.</p>
-            
-            <p>Content <i class="fab fa-creative-commons"></i> {{ .Site.Params.course.copyrightYear }} <a href="{{ .Site.Params.instructor.url }}" target="_blank" rel="noopener">{{ .Site.Params.author }}</a></p>
         
             {{- if .Site.Params.credits }}
             <p>{{ .Site.Params.credits | markdownify }}</p>
